[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/glass-bottle.png" type="Texture" id=1]
[ext_resource path="res://script/lock.gd" type="Script" id=2]
[ext_resource path="res://art/open2.png" type="Texture" id=3]
[ext_resource path="res://art/open1.png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Lock" type="Sprite" parent="."]
position = Vector2( 181.908, 206.056 )
scale = Vector2( 1, 1.13364 )
texture = ExtResource( 1 )

[node name="num1" type="Sprite" parent="."]
position = Vector2( 135.469, 142 )

[node name="num2" type="Sprite" parent="."]
position = Vector2( 165.454, 142 )

[node name="num3" type="Sprite" parent="."]
position = Vector2( 194.454, 142 )

[node name="num4" type="Sprite" parent="."]
position = Vector2( 223.833, 142 )

[node name="open" type="TextureButton" parent="."]
margin_left = 270.181
margin_top = 361.006
margin_right = 350.181
margin_bottom = 401.006
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="open" to="." method="_on_open_pressed"]
